styled joinus and explore page

--- a/src/pages/explore.html
+++ b/src/pages/explore.html
@@ -47,88 +47,85 @@
     </header>
     <h2 class="pages__foreWords">Explore the world of science</h2>
 
-    <main>
-      <!-- ----------- First Section ----------- -->
-      <section class="section_one">
+    <main class="explore__main">
+      <section class="explore__sections">
         <img
-          src="/images_csm/mammoth-1257288.jpg"
+          src="../images_csm/mammoth-1257288.jpg"
           alt="Mammoth skeleton in the museum"
         />
-        <p class="photo_source_mobile">Photo: Community Science Museum</p>
-        <h2 class="h2_one_push_right">For kids</h2>
-        <p class="article_text">
-          Are you a young person looking to learn more about science? Come on
-          down to our museum, there’s plenty to see and do.
-        </p>
-        <p class="article_text">
-          You can learn about Newtonian physics from our bumper swing, or why
-          not travel back in time and meet our resident Woolly Mammoth? Our
-          exhibits are designed to be accessible for interested minds, so make
-          sure you come ready to learn and explore.
-        </p>
+        <div class="explore__textContainer">
+          <h2>For kids</h2>
+          <p>
+            Are you a young person looking to learn more about science? Come on
+            down to our museum, there’s plenty to see and do.
+          </p>
+          <p>
+            You can learn about Newtonian physics from our bumper swing, or why
+            not travel back in time and meet our resident Woolly Mammoth? Our
+            exhibits are designed to be accessible for interested minds, so make
+            sure you come ready to learn and explore.
+          </p>
+        </div>
       </section>
-      <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
 
-      <!-- ----------- Second Section ----------- -->
-      <section class="section_two">
+      <section class="explore__sections">
         <img
-          src="/images_csm/for_kids_2.jpg"
+          src="../images_csm/for_kids_2.jpg"
           alt="Kids playing with VR screen and playing gravity"
         />
-        <p class="photo_source_mobile">Photo: Community Science Museum</p>
-        <p class="article_text">
-          We also have the Young Stars club which meets once a week on a
-          Saturday between 10:00 and 13:00 where you’ll get to explore and
-          experiment with our team of experts.
-        </p>
-        <p class="article_text">
-          During the school holidays we run special holiday clubs where you can
-          join other children your age to go on a journey of discovery. Each
-          holiday we pick a new theme to explore. To find out more about the
-          holiday club and how you can join, send us a message.
-        </p>
+        <div class="explore__textContainer">
+          <p>
+            We also have the Young Stars club which meets once a week on a
+            Saturday between 10:00 and 13:00 where you’ll get to explore and
+            experiment with our team of experts.
+          </p>
+          <p>
+            During the school holidays we run special holiday clubs where you
+            can join other children your age to go on a journey of discovery.
+            Each holiday we pick a new theme to explore. To find out more about
+            the holiday club and how you can join, send us a message.
+          </p>
+        </div>
       </section>
-      <p class="photo_source_desktop_two">Photo: Community Science Museum</p>
 
-      <!-- ----------- Third Section ----------- -->
-      <section class="section_one">
+      <section class="explore__sections">
         <img
-          src="/images_csm/science-in-hd-_Ym6wla_GMQ-unsplash.jpg"
+          src="../images_csm/science-in-hd-_Ym6wla_GMQ-unsplash.jpg"
           alt="Teachers teaching science and math calculations"
         />
-        <p class="photo_source_mobile">Photo: Science in HD on Unsplash</p>
-        <h2 class="h2_one_push_right">For teachers</h2>
-        <p class="article_text">
-          As a community-driven museum, we want to work with schools to create
-          places of learning and exploring. Our team are on hand to give your
-          students guided tours of the museum, teach them in our learning
-          laboratory, and provide great video presentations that will excite and
-          inspire them.
-        </p>
-        <p class="article_text">
-          Please get in touch with us here to find out more about our facilities
-          and to arrange a time to bring your students through for a visit.
-        </p>
+        <div class="explore__textContainer">
+          <h2>For teachers</h2>
+          <p>
+            As a community-driven museum, we want to work with schools to create
+            places of learning and exploring. Our team are on hand to give your
+            students guided tours of the museum, teach them in our learning
+            laboratory, and provide great video presentations that will excite
+            and inspire them.
+          </p>
+          <p>
+            Please get in touch with us here to find out more about our
+            facilities and to arrange a time to bring your students through for
+            a visit.
+          </p>
+        </div>
       </section>
-      <p class="photo_source_desktop_one">Photo: Science in HD on Unsplash</p>
 
-      <!-- ----------- Fouth Section ----------- -->
-      <section class="section_two">
+      <section class="explore__sections">
         <img
-          src="/images_csm/hans-reniers-lQGJCMY5qcM-unsplash.jpg"
+          src="../images_csm/hans-reniers-lQGJCMY5qcM-unsplash.jpg"
           alt="Research in the chemical laboratory"
         />
-        <p class="photo_source_mobile">Photo: Hans Reniers on Unsplash</p>
-        <h2 class="h2_two_push_right">Researchers</h2>
-        <p class="article_text">
-          Are you looking to get involved with our team of researchers and
-          academics? Our museum offers various ways for you to use our resources
-          and contribute towards them. We have online records, laboratory space,
-          and a working relationship with a number of universities around the
-          country.
-        </p>
+        <div class="explore__textContainer">
+          <h2>Researchers</h2>
+          <p>
+            Are you looking to get involved with our team of researchers and
+            academics? Our museum offers various ways for you to use our
+            resources and contribute towards them. We have online records,
+            laboratory space, and a working relationship with a number of
+            universities around the country.
+          </p>
+        </div>
       </section>
-      <p class="photo_source_desktop_two">Photo: Hans Reniers on Unsplash</p>
     </main>
 
     <!-- --------- Form -------------- Form ----------- -->
