--- a/src/pages/joinus.html
+++ b/src/pages/joinus.html
@@ -49,108 +49,106 @@
       making science accessible to all.
     </h2>
 
-    <main>
-      <!-- ----------- First Section ----------- -->
-      <section class="section_one">
+    <main class="joinus__main">
+      <section class="joinus__sections">
         <img
-          src="/images_csm/celso-405219.jpg"
+          src="../images_csm/celso-405219.jpg"
           alt="Moon cosmology in when changing colors"
         />
-        <p class="photo_source_mobile">Photo: Community Science Museum</p>
-        <p class="article_text">
-          Over the course of human history, science has developed from our early
-          understanding of fire, wind, water, and earth to exploring everything
-          from galaxies far away to the very building blocks of life itself. The
-          aim of our museum is to create a space where everyone can experience
-          the wonders of our discoveries and perhaps even ignite a lifelong
-          passion to continue the exploration of the world around us.
-        </p>
+        <div class="joinus__textContainer">
+          <p>
+            Over the course of human history, science has developed from our
+            early understanding of fire, wind, water, and earth to exploring
+            everything from galaxies far away to the very building blocks of
+            life itself. The aim of our museum is to create a space where
+            everyone can experience the wonders of our discoveries and perhaps
+            even ignite a lifelong passion to continue the exploration of the
+            world around us.
+          </p>
+        </div>
       </section>
-      <!-- ----------- Second Section ----------- -->
-      <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
-      <section class="section_two">
+      <section class="joinus__sections">
         <img
-          src="/images_csm/exhibition.jpg"
+          src="../images_csm/exhibition.jpg"
           alt="Exhibition spaces of Community Science Museum"
         />
-        <p class="photo_source_mobile">Photo: Community Science Museum</p>
-        <p class="article_text">
-          We believe science should not be confined to the textbook, but brought
-          to live through exhibits. This is why we have over 1000 different
-          exhibits on the many varied subjects of science to explore. Many of
-          these exhibits are designed for you to interact with and play around
-          to see science come to life (apart from the dinosaur exhibits – they
-          only come to life at night when everyone’s gone home).
-        </p>
+        <div class="joinus__textContainer">
+          <p>
+            We believe science should not be confined to the textbook, but
+            brought to live through exhibits. This is why we have over 1000
+            different exhibits on the many varied subjects of science to
+            explore. Many of these exhibits are designed for you to interact
+            with and play around to see science come to life (apart from the
+            dinosaur exhibits – they only come to life at night when everyone’s
+            gone home).
+          </p>
+        </div>
       </section>
-      <p class="photo_source_desktop_two">Photo: Community Science Museum</p>
 
-      <h2 class="get_involved_title">Get Involved</h2>
-      <!-- ----------- Third Section ----------- -->
-      <section class="section_one">
+      <h2 class="joinus__subHeader">Get Involved</h2>
+      <section class="joinus__sections">
         <img
-          src="/images_csm/kelly-sikkema-4le7k9XVYjE-unsplash.jpg"
+          src="../images_csm/kelly-sikkema-4le7k9XVYjE-unsplash.jpg"
           alt="Giving heart to each other, supporting each other."
         />
-        <p class="photo_source_mobile">Photo: Kelly Sikkema on Unsplash</p>
-        <h2 class="h2_one_push_right">Support</h2>
-        <p class="article_text">
-          There are various ways you can support the museum. Donations are very
-          welcome and are an important way we keep this museum open and
-          accessible to the whole community.
-        </p>
-        <p class="article_text">
-          You can also support us by donating items of interest to the museum’s
-          collections. If you have some item or collection that you think others
-          would enjoy, please let us know by contacting our Collections
-          Department and they will be able to assist you.
-        </p>
+        <div class="joinus__textContainer">
+          <h2>Support</h2>
+          <p class="article_text">
+            There are various ways you can support the museum. Donations are
+            very welcome and are an important way we keep this museum open and
+            accessible to the whole community.
+          </p>
+          <p>
+            You can also support us by donating items of interest to the
+            museum’s collections. If you have some item or collection that you
+            think others would enjoy, please let us know by contacting our
+            Collections Department and they will be able to assist you.
+          </p>
+        </div>
       </section>
-      <p class="photo_source_desktop_one">Photo: Kelly Sikkema on Unsplash</p>
 
-      <!-- ----------- Fouth Section ----------- -->
-      <section class="section_two">
+      <section class="joinus__sections">
         <img
-          src="/images_csm/teamwork_join_hands1804.jpg"
+          src="../images_csm/teamwork_join_hands1804.jpg"
           alt="Get involve by teamwork, join hands."
         />
-        <p class="photo_source_mobile">Photo: @jcomp / Freepik</p>
-        <h2 class="h2_two_push_right">Volunteer</h2>
-        <p class="article_text">
-          A number of people volunteer their time and effort to keep the
-          displays in good order and ready for visitors to come and enjoy.
-          Volunteering has its perks including getting to see behind the scenes
-          of a working museum, access to staff- only lectures, and a monthly
-          lunch where all staff and volunteers come together to discuss ideas
-          for future exhibits and strategies for the museum.
-        </p>
-        <p class="article_text">
-          You can help volunteer in a number of different spheres. Please
-          contact us if you’d like to find out more about how you can get
-          involved.
-        </p>
+        <div class="joinus__textContainer">
+          <h2>Volunteer</h2>
+          <p>
+            A number of people volunteer their time and effort to keep the
+            displays in good order and ready for visitors to come and enjoy.
+            Volunteering has its perks including getting to see behind the
+            scenes of a working museum, access to staff- only lectures, and a
+            monthly lunch where all staff and volunteers come together to
+            discuss ideas for future exhibits and strategies for the museum.
+          </p>
+          <p>
+            You can help volunteer in a number of different spheres. Please
+            contact us if you’d like to find out more about how you can get
+            involved.
+          </p>
+        </div>
       </section>
-      <p class="photo_source_desktop_two">Photo: @jcomp / Freepik</p>
 
-      <!-- ----------- Fifth Section ----------- -->
-      <section class="section_one">
+      <section class="joinus__sections">
         <img
-          src="/images_csm/people-219985_1280.jpg"
+          src="../images_csm/people-219985_1280.jpg"
           alt="A researcher looking throught microscope."
         />
-        <p class="photo_source_mobile">Photo: Community Science Museum</p>
-        <h2 class="h2_one_push_right">Internships</h2>
-        <p class="article_text">
-          Are you interested in working in a museum? Do you enjoy the fun and
-          excitement of sharing the wonders of nature with people? Well you
-          could be just the right person to enjoy an internship at the museum.
-        </p>
-        <p class="article_text">
-          You’ll be learning from a number of different academics and people who
-          are passionate about science and sharing it with the wider community.
-        </p>
+        <div class="joinus__textContainer">
+          <h2>Internships</h2>
+          <p>
+            Are you interested in working in a museum? Do you enjoy the fun and
+            excitement of sharing the wonders of nature with people? Well you
+            could be just the right person to enjoy an internship at the museum.
+          </p>
+          <p>
+            You’ll be learning from a number of different academics and people
+            who are passionate about science and sharing it with the wider
+            community.
+          </p>
+        </div>
       </section>
-      <p class="photo_source_desktop_one">Photo: Community Science Museum</p>
     </main>
 
     <!-- --------- Form -------------- Form ----------- -->
