--- a/src/pages/visit.html
+++ b/src/pages/visit.html
@@ -49,68 +49,63 @@
       experience.
     </h2>
 
-    <main class="items_container">
-      <!-- -------------------- First Section ----------- -->
-      <section class="section_container">
-        <img
-          src="/images_csm/andy-li-A_dJOYpxEVU-unsplash.jpg"
-          alt="Holding ticket in hand"
-        />
-        <p class="photo_source">Photo: Andy Li on Unsplash</p>
-        <h2>Admission</h2>
-        <p class="article_text">The entrance is free for all.</p>
-        <p class="article_text">
-          There are guided tours of the museum that leave every hour. These
-          tours are 70 NOK per person and include a handy printed guide of the
-          museum.
-        </p>
-        <p class="article_text">
-          If you would like to organise a guided tour for your group of 6 or
-          more people, please contact us to arrange the tour.
-        </p>
+    <main class="visit__main">
+      <section class="visit__sections">
+        <div class="visit__cardContainer">
+          <img
+            src="../images_csm/andy-li-A_dJOYpxEVU-unsplash.jpg"
+            alt="Holding ticket on his hand"
+          />
+          <h2>ADMISSION</h2>
+          <p>The entrance is free for all.</p>
+          <p>
+            There are guided tours of the museum that leave every hour. These
+            tours are 70 NOK per person and include a handy printed guide of the
+            museum.
+          </p>
+          <p>
+            If you would like to organise a guided tour for your group of 6 or
+            more people, please contact us to arrange the tour.
+          </p>
+        </div>
+
+        <div class="visit__cardContainer">
+          <img
+            src="../images_csm/absolutvision-UudGNHJdNSo-unsplash.jpg"
+            alt="Handicap sign painted in the parking lot"
+          />
+          <h2>ACCESSIBILITY</h2>
+          <p>
+            The museum has wheelchair accessibility ramps. It also has audio
+            guides and braille display signs for the visually impaired.
+          </p>
+        </div>
       </section>
 
-      <!-- -------------------- Second Section ----------- -->
-      <section class="section_container">
-        <img
-          src="/images_csm/absolutvision-UudGNHJdNSo-unsplash.jpg"
-          alt="Handicap sign painten in the parking lot"
-        />
-        <p class="photo_source">Photo: Photo by AbsolutVision on Unsplash</p>
-        <h2>Accessibility</h2>
-        <p class="article_text">
-          The museum has wheelchair accessibility ramps. It also has audio
-          guides and braille display signs for the visually impaired.
-        </p>
-      </section>
-
-      <!-- --------------------- Third Section ----------- -->
-      <section class="section_container">
-        <img
-          src="/images_csm/joseph-gonzalez-Wns3U-oVoLA-unsplash.jpg"
-          alt="Waffles and coffe on the table, lunckbreak or coffee time"
-        />
-        <p class="photo_source">Photo: Joseph Gonzalez on Unsplash</p>
-        <h2>Food and drinks</h2>
-        <p class="article_text">
-          There is a café attached to the museum where you can get light
-          lunches, soft drinks, coffee, snacks and more.
-        </p>
-      </section>
-
-      <!-- ----------------------- Fouth Section ----------- -->
-      <section class="section_container">
-        <img
-          src="/images_csm/mike-petrucci-c9FQyqIECds-unsplash.jpg"
-          alt="A sign showing that the shop is open, or open sign"
-        />
-        <p class="photo_source">Photo: Mike Petrucci on Unsplash</p>
-        <h2>Shop</h2>
-        <p class="article_text">
-          Our shop offers a range of memorabilia from the museum as well as
-          great gifts and activity packs that allow you to continue to explore
-          science even after you’ve left the museum.
-        </p>
+      <section class="visit__sections">
+        <div class="visit__cardContainer">
+          <img
+            src="../images_csm/joseph-gonzalez-Wns3U-oVoLA-unsplash.jpg"
+            alt="Waffles and coffe on the table, lunckbreak or coffee time"
+          />
+          <h2>FOOD AND DRINKS</h2>
+          <p>
+            There is a café attached to the museum where you can get light
+            lunches, soft drinks, coffee, snacks and more.
+          </p>
+        </div>
+        <div class="visit__cardContainer">
+          <img
+            src="../images_csm/mike-petrucci-c9FQyqIECds-unsplash.jpg"
+            alt="A sign showing that the shop is open, or open sign"
+          />
+          <h2>SHOP</h2>
+          <p>
+            Our shop offers a range of memorabilia from the museum as well as
+            great gifts and activity packs that allow you to continue to explore
+            science even after you’ve left the museum.
+          </p>
+        </div>
       </section>
     </main>
 
