Added contact form for the pages

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="index__formComtainer">
       <h4>Bring some science to your inbox.</h4>
       <form class="index__form">
-        <input type="text" name="email" placeholder="E-mail" />
+        <input type="text" name="email" placeholder="Your e-mail" required />
         <button type="submit" value="Submit">SUBMIT</button>
       </form>
     </div>
