--- a/src/pages/joinus.html
+++ b/src/pages/joinus.html
@@ -151,32 +151,54 @@
       </section>
     </main>
 
-    <!-- --------- Form -------------- Form ----------- -->
-    <div class="form_container">
-      <p class="contact_us">Contact us</p>
-      <p class="form_text">
-        Got a questions? We'd love to hear from you. Send us a message and we'll
-        respond as soon as possible.
-      </p>
-      <br />
-      <form class="contact_form" action="/contactform.php" method="post">
-        <input
-          type="text"
-          name="fullname"
-          id="fullname"
-          placeholder="Full name"
-          value=""
-        />
-        <input type="text" name="email" id="email" placeholder="E-mail" />
-        <input type="text" name="subject" id="subject" placeholder="Subject" />
-        <textarea
-          class="comment_box"
-          name="message"
-          placeholder="Message"
-        ></textarea>
-        <button type="submit" value="Submit">SUBMIT</button>
-      </form>
-    </div>
+    <!-- ------------ Form ----------- -->
+    <section class="form__section">
+      <div class="form__container">
+        <div class="form__textContainer">
+          <h2>Contact</h2>
+          <p>
+            Did you enjoy the site or need something to be changed? I love to
+            hear from you! Questions, comments, suggestions and more can be sent
+            below.
+          </p>
+        </div>
+        <div class="passed-validation" id="passedValidation">
+          THANK YOU FOR THE MESSAGE!
+        </div>
+
+        <form id="contactForm">
+          <div>
+            <label for="name">Name</label>
+            <input id="name" name="name" required />
+          </div>
+          <div>
+            <label for="subject">Subject</label>
+            <input id="subject" name="subject" />
+            <div class="form-error" id="subjectError">
+              Your subject must be at least 10 characters
+            </div>
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input id="email" name="email" />
+            <div class="form-error" id="emailError">
+              Pleas enter a valid email address
+            </div>
+          </div>
+          <div>
+            <label for="message">Message</label>
+            <textarea rows="4" id="message" name="message" form="contactForm">
+            </textarea>
+            <div class="form-error" id="messageError">
+              Your message must contain at least 25 characters
+            </div>
+          </div>
+          <div>
+            <button type="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+    </section>
 
     <footer class="footer"></footer>
 
